[Fix] fixed links stay in one line on safari

--- a/src/assets/scss/news/schedule.scss
+++ b/src/assets/scss/news/schedule.scss
@@ -70,6 +70,10 @@
     padding: 20px 0;
   }
 
+  #example > p {
+    word-wrap: break-word;
+  }
+
   #presentation-example,
   #espresso-example {
     > p {
